[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Robaaa <linkmash030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."asyncflows"]
actions = "my_actions"
